--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@coreui/coreui": "^3.0.0",
-    "@coreui/vue": "^3.0.5",
     "@nuxtjs/axios": "^5.9.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "bootstrap": "^4.1.3",
@@ -22,8 +20,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "feather-icons": "^4.26.0",
-    "nuxt": "^2.0.0",
-    "startbootstrap-sb-admin-2": "^4.0.7"
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
