--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.9.6",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/vuetify": "^1.11.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "cross-env": "^5.2.0",
