--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.9.6",
     "@nuxtjs/dotenv": "^1.4.1",
-    "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0",
+    "@nuxtjs/vuetify": "^1.11.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "feather-icons": "^4.26.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-property-decorator": "^2.5.1"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
