--- a/package.json
+++ b/package.json
@@ -13,29 +13,30 @@
     "test": "jest"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.9.6",
+    "@nuxtjs/axios": "^5.9.7",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/vuetify": "^1.11.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "feather-icons": "^4.26.0",
-    "nuxt": "^2.0.0",
+    "feather-icons": "^4.28.0",
+    "nuxt": "^2.12.2",
     "nuxt-property-decorator": "^2.5.1"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.6.0",
+    "@nuxt/typescript-build": "^0.6.2",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@types/jest": "^25.2.1",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
+    "babel-jest": "^25.2.6",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
-    "jest": "^24.1.0",
+    "jest": "^25.2.7",
     "node-sass": "^4.13.1",
     "nodemon": "^1.18.9",
     "sass-loader": "^8.0.2",
-    "ts-jest": "^25.0.0",
+    "ts-jest": "^25.3.1",
     "vue-jest": "^4.0.0-0"
   }
 }
