--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     },
     "types": [
       "@types/node",
+      "@types/jest",
       "@nuxt/types",
       "@nuxt/vue-app",
       "@nuxtjs/axios"
