--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.9.7",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/vuetify": "^1.11.0",
+    "core-js": "^2.6.10",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "feather-icons": "^4.28.0",
